# pack-stats

./: .gitignore  LICENSE  README.md  build.py  index.html.j2  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.streamlit/: config.toml
src/: app.py  millify.py  pack_graph.py  utils.py
src/plugins/: grab_stats.py
