[tool.poetry]
name = "pack_stats"
version = "0.1.0"
description = "Streamlit app to display stats about your data pack"
authors = ["rx97"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.2"
beet = "^0.71.0"
mecha = "^0.54.9"
bolt = "^0.17.7"
millify = "^0.1.1"
streamlit-agraph = "^0.0.41"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"
poethepoet = "^0.16.2"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
