[tool.poetry]
name = "pack_stats"
version = "0.1.0"
description = "Streamlit app to display stats about your data pack"
authors = ["rx97"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.2"
Pygments = "^2.13.0"

[tool.poetry.group.stlite.dependencies]
beet = "^0.71.0"
mecha = "^0.54.9"
streamlit-agraph = "^0.0.41"

[tool.poetry.group.dev.dependencies]
watchdog = "^2.1.9"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
Jinja2 = "^3.1.2"
toml = "^0.10.2"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[tool.poe.tasks]
format = { shell = "isort src; black src"}
build = { script = "build:main" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
